[package]

name = "astro"
version = "1.0.5"
authors = ["Saurav Sachidanand"]

license = "MIT"

documentation = "https://www.github.com/saurvs/astro-rust"
repository = "https://saurvs.github.io/astro-rust"

description = " Fast, powerful and accurate algorithms for fundamental astronomy."
keywords = ["astronomy", "algorithms", "ephemeris", "planet", "solar"]
