[package]

name = "astro"
version = "2.0.0"
authors = ["Saurav Sachidanand"]

license = "MIT"

repository = "https://www.github.com/saurvs/astro-rust"
documentation = "https://saurvs.github.io/astro-rust"

description = "Advanced algorithms for astronomy"
keywords = ["astronomy", "algorithms", "ephemeris", "planet", "solar"]
